Stack buffers mustn't escape their scope. PR 54326 from David Binderman